# p3

./: .gitignore  .gitmodules  FOLDER_INDEX.md  REINDEX.md  reindex.sh
s10/: .env  (+3 more)
s72/: .gitignore  README.md  pyproject.toml
s72/ai-video-studio/agents/: worker.py
s72/ai-video-studio/backend/: auto_script.py  config.py  renderer.py  visibility.py
s72/ai-video-studio/backend/sources/: github.py  tiktok.py  youtube.py
s72/ai-video-studio/docs/: bitacora.md  bitacora_completa.md  plan_multiagente.md
s72/capabilities/ai-video-studio/: requirements.txt
s72/capabilities/ai-video-studio/agents/: proxy.py  template.py
s72/capabilities/ai-video-studio/backend/: composer.html  feed.py  main.py
s72/capabilities/video-templator/: README.md
s72/docs/: arquitectura.md  ipc-bus-especificacion.md
s72/examples/: render_v2.py
s72/nova/: __init__.py  __main__.py
s72/nova/ai/: __init__.py  adapter.py
s72/nova/core/: __init__.py  auto.py  config.py  logging.py  runtime.py  tester.py
s72/nova/devtools/: __init__.py  inspector.py  panel.py
s72/nova/docs/: framework-design.md  testing-y-framework.md
s72/nova/ipc/: __init__.py  bus.py  orchestrator.py  protocol.py
s72/nova/meta/: __init__.py  codegen.py  evolution.py  spec.py  watcher.py
s72/nova/runtime/: __init__.py  hot_reload.py  server.py  spa.py
s72/nova/spec/: app.yaml
s72/nova/tests/: test_core.py  test_evolution.py  test_orchestrator.py
s72/test-reports/: 000-inicial.md  001-verificacion-features.md  harness.py
s72/video_templator/: __init__.py
s72/video_templator/templates/: gaming.py
(+1934 files in other folders)
