[project]
name = "video-templator"
version = "0.1.0"
description = "AI-powered video template engine for rapid video creation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.0.0",
    "moviepy>=2.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
scripts = ["openai>=1.0.0"]  # for LLM script generation
