[project]
name = "nova"
version = "0.1.0"
description = "Next-gen Omniversal Virtual Architecture — self-building web framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
ai = ["openai>=1.0.0"]
dev = ["httpx>=0.27.0", "rich>=13.0.0"]
all = ["nova[ai,dev]"]

[tool.nova]
spec_path = "spec/app.yaml"
